# sbml-pbk-utils

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  unit-test.yml
docs/: annotation.md  reporting.md  simulation.md  validation.md
sbmlpbkutils/: __init__.py  annotations_template_generator.py  diagram_creator.py  ontology_checker.py  parametrisations_template_generator.py  pbk_model_annotations_validator.py  pbk_model_annotator.py  pbk_model_infos_extractor.py  pbk_model_report_generator.py  pbk_model_validator.py  pbk_ontology_checker.py  pbk_report_generator.py  qualifier_definitions.py  sbml_element_infos_exporter.py  sbml_model_annotator.py  sbml_model_creators_annotator.py  sbml_validator.py  term_definitions.py  unit_definitions.py  unit_string_generator.py  validation_record.py
sbmlpbkutils/simulation/: definitions.py  simulation.py  simulation_units.py  units.py
src/sbmlPbkToolbox/: sbml_validator.py
test/: .context.py  annotations_template_generator_tests.py  parametrisations_template_generator_tests.py
test/models/: euromix.sbml
tests/: annotations_template_generator_tests.py  conf.py  diagram_creator_tests.py  helpers.py  ontology_checker_tests.py  parametrisations_template_generator_tests.py  pbk_model_annotations_validator_tests.py  pbk_model_annotator_tests.py  pbk_model_infos_extractor_tests.py  pbk_model_report_generator_tests.py  pbk_model_validator_tests.py  pbk_ontology_checker_tests.py  pbk_report_generator_tests.py  sbml_model_creators_annotator_tests.py  unit_definitions_tests.py
tests/e2e/: diagram_creation_tests.py  model_annotation_tests.py  model_report_creation_tests.py  parametrisations_template_creation_tests.py  scenario_simulation_tests.py
tests/models/: compile_test_models.py  euromix.annotated.sbml  euromix.annotations.csv  euromix.sbml  example.annotations.csv  example.sbml  simple.annotated.sbml  simple.annotations.csv  simple.ant  simple.sbml  simple_lifetime.ant  simple_lifetime.sbml  simple_metab.annotated.sbml  simple_metab.annotations.csv  simple_metab.ant  simple_metab.sbml  test.py
tests/resources/models/: compile_models.py
tests/unit/: annotations_template_generator_tests.py  parametrisation_template_generator_tests.py  pbk_model_annotator_tests.py  pbk_model_infos_extractor_tests.py  pbk_model_report_generator_tests.py  pbk_model_validator_tests.py  pbk_ontology_checker_tests.py  unit_definitions_tests.py
(+31 files in other folders)
