[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sbmlpbkutils"
description = "Utils for FAIR PBK model development with SBML"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Johannes Kruisselbrink", email = "jwkruisselbrink@gmail.com"}
]
maintainers = [ 
    {name = "Johannes Kruisselbrink", email = "jwkruisselbrink@gmail.com"}
]
dependencies = [
    "antimony>=3.1.1",
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "owlready2>=0.49",
    "pandas>=2.3.3",
    "python-libsbml>=5.20.5",
    "pyyaml>=6.0.3",
    "sbmlutils>=0.9.4",
    "tabulate>=0.9.0",
    "tellurium>=2.2.11.2"
]
keywords=["pbk","sbml","fair"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE"}
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "setuptools>=80.9.0"
]
test = [
    "parameterized>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/jwkruisselbrink/sbml-pbk-utils"
Repository = "https://github.com/jwkruisselbrink/sbml-pbk-utils"

[tool.setuptools_scm]
version_file = "sbmlpbkutils/_version.py"
